--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p id="plant-status">Your plant looks healthy!</p>
 </div>
 <audio id="background-music" autoplay loop>
-<source src="relaxing-music.mp3" type="audio/mpeg">
+<source src="relaxing-music.mp3">
 </audio>
 <script src="script.js"></script>
 </body>
